--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <title>Yorumi</title>
 </head>
 
-<body>
+<body class="no-copy">
   <div id="root"></div>
   <script type="module" src="/src/main.tsx"></script>
 </body>
